argocd/gateway/argocd-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-cli-server
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "argocd-cli.vitorflix.club"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
