argocd/gateway/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: vitorflix
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "argocd.vitormuzzi.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
